<resources>
    <string name="app_name">Android Labs</string>

    <string name="textView">Enter your email address: </string>
    <string name="textView1">Type your password: </string>
    <string name="yourProfile">Your profile </string>
    <string name="yourName">Your name: </string>
    <string name="yourEmail">Your email: </string>
    <string name="EditText">Type email here</string>
    <string name="name">Enter your name</string>
    <string name="yourPicture">Your picture: </string>
    <string name="EditText1"></string>
    <string name="email">Enter your email</string>
    <string name="ButtonText">Login</string>
    <string name="takePicture">Click the button above to take a picture</string>
    <string name="chatButton">Go to chat</string>
    <string name="sendButton">Send</string>
    <string name="receiveButton">Receive</string>
    <string name="typeText">Type here</string>
    <string name="alertTitle">"You clicked on item #"</string>
    <string name="alertMessage1">"You can update the fields and then click update to save in the database"</string>
    <string name="alertMessage2">". The database id: "</string>
    <string name="alertPB">"Delete"</string>
    <string name="alertUB">"Update"</string>
    <string name="alertNB">"Dismiss"</string>
    <string name="message">"Message"</string>
    <string name="isSended">is a Sent Message</string>
    <string name="weatherButton">Weather</string>
    <string name="hide">hide</string>
    <string name="toolBarButton" >tool bar</string>
    <string name="favorite">favorite</string>
    <string name="search">search</string>
    <string name="delete">delete</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="login">Go back to login</string>
    <string name="weatherForecast">Weather Forecast</string>
    <string name="chatPage">Chat Page</string>


</resources>