<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    tools:context=".MainActivity"
    android:orientation="vertical">


    <TextView
        android:id="@+id/yourProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView"
        android:textSize="30dp" />
    <TextView
        android:id="@+id/yourName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yourName"
        android:textSize="30dp" />
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="30dp"/>
    <TextView
        android:id="@+id/yourEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yourEmail"
         />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="30dp"/>
    <TextView
        android:id="@+id/yourPicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yourPicture"
        />
    <ImageButton
        android:id="@+id/ibutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:src="@android:drawable/picture_frame" />
    <TextView
        android:id="@+id/takePicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/takePicture"
         />
    <Button
        android:id="@+id/chatButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chatButton"
        />

</LinearLayout>