<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:id="@+id/chatPage"
        android:title="@string/chatPage"
        android:icon="@drawable/favorite"
        android:orderInCategory="100"
        app:showAsAction="always"/>  <!-- This uses showAsAction=always, so look at icon= parameter -->


    <item android:id="@+id/weatherForecast"
        android:orderInCategory="50"
        app:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/search"
        app:showAsAction="always|collapseActionView"
        android:title="@string/weatherForecast"/>    <!-- This uses showAsAction=always, so look at icon= parameter -->


    <item android:id="@+id/login"
        android:icon="@drawable/delete"
        android:title="@string/login"
        app:showAsAction="never"
        android:orderInCategory="400"/> <!-- This uses showAsAction=never, so look at title= parameter -->

</menu>