<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    tools:context=".MainActivity">


    <TextView
        android:id="@+id/TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView"
        android:textSize="30dp" />
    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/EditText"
        android:inputType="textEmailAddress"/>
    <TextView
        android:id="@+id/TextView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView1"
        android:textSize="30dp" />
    <EditText
        android:id="@+id/editTtext1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/EditText1"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/ButtonText" />

    <CheckBox
        android:id="@+id/checkbox"

        android:layout_gravity="fill_horizontal"
        android:layout_below="@+id/TextView"


        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/CheckBoxText" />




    <ImageButton
        android:id="@+id/imageButton"

        android:layout_gravity="fill_horizontal"
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:src="@drawable/flag" />

    <Switch
        android:id="@+id/switch1"

        android:layout_gravity="fill_horizontal"

        android:layout_alignParentEnd="true"
        android:layout_below="@+id/button"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/SwitchText"
        tools:targetApi="ice_cream_sandwich" />





</RelativeLayout>