<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:id="@+id/favorate_item"
        android:title="@string/favorate"
        android:icon="@drawable/favorate"
        android:orderInCategory="100"
        app:showAsAction="always"/>  <!-- This uses showAsAction=always, so look at icon= parameter -->


    <item android:id="@+id/search_item"
        android:orderInCategory="50"
        app:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/search"
        app:showAsAction="always|collapseActionView"
        android:title="@string/search"/>    <!-- This uses showAsAction=always, so look at icon= parameter -->


    <item android:id="@+id/delete_item"
        android:icon="@drawable/delete"
        android:title="@string/delete"
        app:showAsAction="never"
        android:orderInCategory="400"/> <!-- This uses showAsAction=never, so look at title= parameter -->

    <item android:id="@+id/mail_item"
        android:icon="@drawable/email"
        android:orderInCategory="75"
        app:showAsAction="always"
        android:title="@string/email"/>
</menu>